# CameraTest

./: CMakeLists.txt  Main.qml  main.cpp  videoprocessor.cpp  videoprocessor.h
